--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-micronaut:
-  application:
-    name: backendTennis
-datasources:
-  default:
-    url: jdbc:postgresql://localhost:5432/postgres
-    driverClassName: org.postgresql.Driver
-    username: postgres
-    password: ''
-jpa.default.properties.hibernate.hbm2ddl.auto: update
+#micronaut:
+#  application:
+#    name: backendTennis
+#datasources:
+#  default:
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    driverClassName: org.postgresql.Driver
+#    username: postgres
+#    password: ''
+#jpa.default.properties.hibernate.hbm2ddl.auto: update
